--- a/ORANGOTAN.css
+++ b/ORANGOTAN.css
@@ -22,7 +22,6 @@ body::-webkit-scrollbar {
      top: 100px;
      z-index: auto;
  }
- 
  body::-webkit-scrollbar-thumb {
     background:  #000000;
      width: 8px;
@@ -34,38 +33,16 @@ body::-webkit-scrollbar {
      top: 100px;
      z-index: auto;
  }
- body::-webkit-scrollbar-thumb:hover{
-     visibility: visible;  
- }
 header {
     position: relative;
     width: 100%;
-    height: 100px;
-   /* border: 1px solid #fff; */
+    height: 100px; 
     overflow: hidden;
     box-shadow: 0px 0px 25px -8px #000000;
-}
-body::before {
-    content: '';
-    width: 100%;
-    position: absolute;
-    height: 100%;
-    background: #ffffff;
-    opacity: .5;
-    z-index: -1;
-}
-body::after {
-    content: '';
-    width: 100%;
-    position: absolute;
-    height: 100%;
-    background: linear-gradient(90deg transparent #ffffff);
-    z-index: -1;
 }
 header nav{
     width: 100%;
     height: 10%;
-  /*  border: 1px solid #fff; */
     display: flex;
     align-items: center;
 }
@@ -99,7 +76,6 @@ header nav .navCont #logoPhrase #phrase {
 header nav .navCont #navSearchPremium {
     display: flex;
     width: auto;
-
 }
 header nav .navCont #navSearchPremium #menuBar {
     display: flex;
@@ -151,7 +127,7 @@ header nav #navSearchPremium #searchProfile .searchBar #searchInput {
     border: none;
 }
 header nav #navSearchPremium #searchProfile .searchBar #searchInput::placeholder {
-    color: #000000;
+    color: #333333;
     font-size: 12px;
 }
 header nav #navSearchPremium #searchProfile #profileHolder {
@@ -186,102 +162,6 @@ header nav #navSearchPremium #searchProfile #profileHolder #premiumOption #premi
 header nav #navSearchPremium #profileHolder #premiumOption:hover {
     background: #777777;
 }
- /*---------------------------------------another--------------------------------------------------------------------*/
-header nav #navSearchPremium #searchProfile .searchBar .search {
-    position: absolute;
-    width: 320px;
-    height: 250px;
-   /* border: 1px solid #fff;*/
-    right: 0px;
-    top: 40px;
-    z-index: 9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999;
-    overflow-Y: auto;
-}
- header nav #navSearchPremium #searchProfile .searchBar .search::-webkit-scrollbar {
-   background:  rgb(255, 255, 255, .3);
-    width: 5px;
-    border-radius: 5px;
-    visibility: visible;
-    height: 0px;
-    border: 1px solid #fff;
-    right: 0px;
-    top: 40px;
-    z-index: -auto;
-}
-header nav #navSearchPremium #searchProfile .searchBar .search::-webkit-scrollbar-thumb {
-    background:  rgb(255, 255, 255, .3);
-     width: 5px;
-     border-radius: 5px;
-     visibility: hidden;
-     height: 190px;
-     border: 1px solid #fff;
-     right: 0px;
-     top: 40px;
-     z-index: 9999;
- }
- header nav #navSearchPremium #searchProfile .searchBar .search:hover::-webkit-scrollbar {
-     visibility: visible;
- }
- header nav #navSearchPremium #searchProfile .searchBar .search:hover::-webkit-scrollbar-thumb {
-      visibility: visible;
-  }
-header nav #navSearchPremium #searchProfile .searchBar .search .card {
-    position: relative;
-    width: 100%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    margin: 0px 0px 5px 0px;
-    padding: 3px 0px;
-   /* border: 1px solid #fff;*/
-    text-decoration: none;
-    color: #ffffff;
-    border-radius: 10px;
-}
-header nav #navSearchPremium #searchProfile .searchBar .search .card::before {
-    content: '';
-    width: 100%;
-    position: absolute;
-    height: 100%;
-    background: rgb(255, 255, 255, .1);
-    backdrop-filter: blur(5px);
-    border-radius: 5px;
-    z-index: -1;
-} 
-header nav #navSearchPremium #searchProfile .searchBar .search .card img {
-    width: 28px;
-    height: 90%;
-    background: rgb(255, 255, 255, .1);
-    border-radius: 0%;
-    margin: 0px 8px 0px 8px;
-    z-index: -1;
-} 
-header nav #navSearchPremium #searchProfile .searchBar .search .card .cont {
-   margin-left: 10px;
-} 
-header nav #navSearchPremium #searchProfile .searchBar .search .card .cont h3 {
-    font-size: 15px;
-    line-height: 25px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    width: 250px;
-    margin: 0px;
- } 
- header nav #navSearchPremium #searchProfile .searchBar .search .card .cont p {
-    font-size: 10px;
-    color: rgb(255, 255, 255, .8);
-    margin: 0px;
- }
-  header nav #navSearchPremium #searchProfile .searchBar .search .card .cont span {
-    font-size: 10px;
-    color: #000;
-    background-color: yellow;
-    padding: 0px 3px;
-    margin: 0px 5px 0px 10px;
-    font-weight: 500;
- }
- /*---------------------------------------another--------------------------------------------------------------------*/
 main #darkModeSwitch {
     display: flex;
     align-items: center;
@@ -478,15 +358,9 @@ main #newMoviesDiv #newMovies #newMoviesContainer #moreMovies #forCursor {
     width: auto;
     justify-content: center;
     align-items: center;
+    border: 0px;
 }
 main #newMoviesDiv #newMovies #newMoviesContainer #moreMovies #forCursor #moreIcon {
-    display: flex;
-    height: 17.13px;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-}
-main #newMoviesDiv #newMovies #newMoviesContainer #moreMovies #forCursor #moreIcon::before {
     display: flex;
     height: 17.13px;
     justify-content: center;
@@ -674,15 +548,9 @@ main #newAnimeDiv #newAnime #newAnimeContainer #moreAnime #forCursor {
     width: auto;
     justify-content: center;
     align-items: center;
+    border: 0px;
 }
 main #newAnimeDiv #newAnime #newAnimeContainer #moreAnime #forCursor #moreIcon {
-    display: flex;
-    height: 17.13px;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-}
-main #newAnimeDiv #newAnime #newAnimeContainer #moreAnime #forCursor #moreIcon::before {
     display: flex;
     height: 17.13px;
     justify-content: center;
@@ -846,15 +714,9 @@ main #newCartoonDiv #newCartoon #newCartoonContainer #moreCartoon #forCursor {
     width: auto;
     justify-content: center;
     align-items: center;
+    border: 0px;
 }
 main #newCartoonDiv #newCartoon #newCartoonContainer #moreCartoon #forCursor #moreIcon {
-    display: flex;
-    height: 17.13px;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-}
-main #newCartoonDiv #newCartoon #newCartoonContainer #moreCartoon #forCursor #moreIcon::before {
     display: flex;
     height: 17.13px;
     justify-content: center;
@@ -1007,15 +869,9 @@ main #newSeriesDiv #newSeries #newSeriesContainer #moreSeries #forCursor {
     width: auto;
     justify-content: center;
     align-items: center;
+    border: 0px;
 }
 main #newSeriesDiv #newSeries #newSeriesContainer #moreSeries #forCursor #moreIcon {
-    display: flex;
-    height: 17.13px;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-}
-main #newSeriessDiv #newSeries #newSeriesContainer #moreSeries #forCursor #moreIcon::before {
     display: flex;
     height: 17.13px;
     justify-content: center;
