--- a/download.css
+++ b/download.css
@@ -182,10 +182,11 @@ main #darkModeSwitch #modeSwitchCase {
     margin-left: 10px ;
 }
 main #darkModeSwitch #modeSwitchCase #modeSwithBall {
-    width: 23px;
-    height: 23px;
+    width: 25px;
+    height: 25px;
+    border: 0px;
     border-radius: 100px;
-    margin-left: 10px;
+    margin-left: 8px;
     background-color: #000000;
 }
 /*---------------------------------------------Ad-------------------------------------------*/
