--- a/cartoons.css
+++ b/cartoons.css
@@ -36,13 +36,13 @@ body::-webkit-scrollbar {
 header {
     position: relative;
     width: 100%;
-    height: 100px;
+    height: auto;
     overflow: hidden;
     box-shadow: 0px 0px 25px -8px #000000;
 }
  header nav{
     width: 100%;
-    height: 10%;
+    height: auto;
     display: flex;
     align-items: center;
 }
@@ -1473,3 +1473,117 @@ main #ad32 #D32 #subAd2 p {
     align-items: center;
 }
 /*------------------------------------------------Ad-----------------------------------------------*/
+header nav .navCont #navSearchPremium #hamburgerMenu {
+    display: ;
+}
+header nav .navCont #navSearchPremium #hamburgerMenu #hamburgerIcon {
+    display: hidden;
+    width: 30px;
+    height: 3px;
+    background-color: #000;
+    border-radius: 8px;
+    margin: 5px 10px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+@media all and (max-width: 1500px){
+    header nav .navCont #navSearchPremium #menuBar {
+        margin-right: 0px;
+    }
+}
+@media all and (max-width: 1260px){
+    header nav #navSearchPremium #searchProfile .searchBar {
+        margin: 0px 20px 0px 10px;
+        width: auto;
+        border-radius: 50%;
+        align-items: center;
+        justify-content: center;
+        height: 30px;
+    }
+    header nav #navSearchPremium #searchProfile .searchBar #searchIcon {
+        width: 15px;
+        height: 15px;
+        margin: 0px 7.5px 0px 7.5px;
+    }
+    header nav #navSearchPremium #searchProfile .searchBar #searchInput {
+        display: hidden;
+        width: 0px;
+        height: 30px;
+        padding: 0px 0px;
+    }
+    header nav #navSearchPremium #searchProfile .searchBar #searchInput::placeholder {
+        display: hidden;
+    }
+}
+@media all and (max-width: 1051px){
+    header nav .navCont #navSearchPremium #menuBar {
+        position: fixed;
+        right: -100%; 
+        top: 8.5rem;
+        flex-direction: column;
+        background: #f2f2f2;
+        width: 50%;
+        border-radius: 10px;
+        transition: 0.3s;
+        text-align: center;
+        box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+    }
+    header nav .navCont #navSearchPremium #menuBar.active {
+        right: 0px;
+    }
+    header nav .navCont #navSearchPremium #hamburgerMenu.active #hamburgerIcon:nth-child(2) {
+        opacity: 0%;
+    }
+    header nav .navCont #navSearchPremium #hamburgerMenu.active #hamburgerIcon:nth-child(1) {
+       transform: translateY(8px) rotate(45deg);
+    }
+    header nav .navCont #navSearchPremium #hamburgerMenu.active #hamburgerIcon:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    header nav .navCont #navSearchPremium #menuBar #menu {
+        margin: 2.5rem;
+    }
+    header nav .navCont #navSearchPremium #hamburgerMenu #hamburgerIcon {
+        display: block; 
+    }
+    header nav .navCont #logoPhrase {
+        position: relative;
+        display: block; 
+        margin: none;
+    }
+    header nav .navCont #logoPhrase #logo {
+        text-align: center;
+        margin: 0px;
+        font-weight: bolder;
+        font-size: 20px;
+        color: #000000;
+    }
+    header nav .navCont #logoPhrase #phrase {
+        text-align: center;
+        margin: 0px; 
+        color: #000000;
+        font-size: 10px;
+        font-weight: 400;
+    }
+    header nav .navCont #navSearchPremium #menuBar #menu {
+        padding: 3px 15px;
+     }
+     header nav .navCont #navSearchPremium #menuBar #menu a {
+        text-decoration: none;
+        font-size: 12px;
+        font-weight: bolder;
+        color: #000000;
+        transition: .3s linear;
+     }
+     header nav .navCont #navSearchPremium #menuBar #menu a:hover {
+        color: #777777;
+     }
+     header nav #searchProfile {
+        width: auto;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+     }
+}
