--- a/ORANGOTAN.css
+++ b/ORANGOTAN.css
@@ -13,36 +13,36 @@ body {
 }
 body::-webkit-scrollbar {
     background:  #f2f2f2;
-     width: 8px;
-     border-radius: 5px;
-     visibility: visible;
-     height: 100px;
-     border: 1px solid #000;
-     right: 0px;
-     top: 100px;
-     z-index: auto;
+    width: 8px;
+    border-radius: 5px;
+    visibility: visible;
+    height: 100px;
+    border: 1px solid #000;
+    right: 0px;
+    top: 100px;
+    z-index: auto;
  }
  body::-webkit-scrollbar-thumb {
     background:  #000000;
-     width: 8px;
-     border-radius: 5px;
-     visibility: visible;
-     height: 0px;
-     border: 1px solid #000;
-     right: 0px;
-     top: 100px;
-     z-index: auto;
+    width: 8px;
+    border-radius: 5px;
+    visibility: visible;
+    height: 0px;
+    border: 1px solid #000;
+    right: 0px;
+    top: 100px;
+    z-index: auto;
  }
 header {
     position: relative;
-    width: 100%;
+    width: auto;
     height: auto; 
     overflow: hidden;
     box-shadow: 0px 0px 25px -8px #000000;
 }
 header nav{
     width: 100%;
-    height: 10%;
+    height: auto;
     display: flex;
     align-items: center;
 }
@@ -80,7 +80,7 @@ header nav .navCont #navSearchPremium {
 header nav .navCont #navSearchPremium #menuBar {
     display: flex;
     align-items: center;
-    margin-right: 100px;
+    margin-right: 80px;
 }
 header nav .navCont #navSearchPremium #menuBar #menu {
    padding: 3px 15px;
@@ -907,6 +907,7 @@ main #supportContactRequest #supportContactRequestHolder {
     height: 90%;
     width: 80%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
 }
@@ -1066,20 +1067,20 @@ header nav .navCont #navSearchPremium #hamburgerMenu #hamburgerIcon {
     height: 3px;
     background-color: #000;
     border-radius: 8px;
-    margin: 5px 20px;
+    margin: 5px 10px;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
     cursor: pointer;
 }
 @media all and (max-width: 1500px){
     header nav .navCont #navSearchPremium #menuBar {
-        margin-right: 20px;
+        margin-right: 0px;
     }
 
 }
 @media all and (max-width: 1260px){
     header nav #navSearchPremium #searchProfile .searchBar {
-        margin: 0px 20px 0px 0px;
+        margin: 0px 20px 0px 10px;
         width: auto;
         border-radius: 50%;
         align-items: center;
@@ -1130,7 +1131,7 @@ header nav .navCont #navSearchPremium #hamburgerMenu #hamburgerIcon {
         margin: 2.5rem;
     }
     header nav .navCont #navSearchPremium #hamburgerMenu #hamburgerIcon {
-        display: block;
+        display: block; 
     }
     header nav .navCont #logoPhrase {
         position: relative;
@@ -1171,4 +1172,25 @@ header nav .navCont #navSearchPremium #hamburgerMenu #hamburgerIcon {
          align-items: center;
          justify-content: space-between;
      }
+}
+@media all and (max-width: 1250px){
+    main #supportContactRequest #supportContactRequestHolder {
+        display: block;
+        width: auto;
+    }   
+    main #supportContactRequest #supportContactRequestHolder #supportContact {
+        margin-bottom:  50px;
+    }
+    main #supportContactRequest #supportContactRequestHolder #request {
+        margin-top:  150px;
+    }
+    main #supportContactRequest {
+        padding-top: 50px;
+        width: 100%;
+        height: auto;
+        background: #f2f2f2;
+        margin-top: 30px;
+        margin-bottom: 0px;
+    }
+    
 }
