--- a/ORANGOTANmovie.css
+++ b/ORANGOTANmovie.css
@@ -145,12 +145,16 @@ header nav #navSearchPremium #searchProfile #profileHolder #profileImage{
     margin: 0px 5px 0px 0px;
 }
 header nav #navSearchPremium #searchProfile #profileHolder #premiumOption{
+    display: flex;
     width: 133px;
     height: 24px;
     border-radius: 4px;
     border: none;
     font-weight: bolder;
     padding-left: 5px;
+}
+header nav #navSearchPremium #searchProfile #profileHolder #premiumOption p {
+    margin: 0px 0px 0px 0px;
 }
 header nav #navSearchPremium #searchProfile #profileHolder #premiumOption #premiumIcon{
     width: 15px;
@@ -1618,4 +1622,23 @@ header nav .navCont #navSearchPremium #hamburgerMenu #hamburgerIcon {
         align-items: center;
         justify-content: space-between;
      }
+}
+@media all and (max-width: 1050px){
+    header nav #navSearchPremium #searchProfile #profileHolder #premiumOption {
+        width: auto;
+        height: 24px;
+        border-radius: 4px;
+        border: none;
+        font-weight: bolder;
+        padding-left: 5px;
+    }
+    header nav #navSearchPremium #searchProfile #profileHolder #premiumOption p{
+        display: hidden;
+        width: 133px;
+        height: 24px;
+        border-radius: 4px;
+        border: none;
+        font-weight: bolder;
+        padding-left: 5px;
+    }
 }
