--- a/copyright.css
+++ b/copyright.css
@@ -1,3 +1,30 @@
+:root {
+    --background-color: rgb(255,255,255);
+    --paragraph-color: rgb(0, 0, 0);
+    --section-background: rgb(242, 242, 242);
+    --alt-color: rgb(119, 119, 119);
+    --shadow-style: 0px 0px 25px -8px rgb(0, 0, 0);
+    --imdb-icon:  rgb(255, 215, 0);
+    --star-rating: rgb(255, 255, 0);
+    --premium-icon: rgb(0, 191, 255);
+    --srollbar-border: 1px solid rgb(0, 0, 0);
+    --placeholder-color: rgb(51, 51, 51);
+}
+[theme = "dark"] {
+    --background-color: rgb(18, 18, 18);
+    --paragraph-color: rgb(255, 255, 255);
+    --section-background: rgb(13, 9, 7);
+    --alt-color: rgb(119, 119, 119);
+    --shadow-style: 0px 0px 25px -8px rgb(0, 0, 0);
+    --imdb-icon:  rgb(255, 215, 0);
+    --star-rating: rgb(255, 255, 0);
+    --premium-icon: rgb(0, 191, 255);
+    --srollbar-border: 1px solid rgb(255, 255, 255);
+    --placeholder-color: rgb(51, 51, 51);
+}
+[theme="dark"] main #darkModeSwitch #modeSwitchCase #modeSwitchBall {
+    left: 25px;
+}
 header nav .navCont #navSearchPremium #hamburgerMenu {
     display: ;
 }
