--- a/request.css
+++ b/request.css
@@ -1,4 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+:root {
+    --background-color: rgb(255,255,255);
+    --paragraph-color: rgb(0, 0, 0);
+    --section-background: rgb(242, 242, 242);
+    --alt-color: rgb(119, 119, 119);
+    --shadow-style: 0px 0px 25px -8px rgb(0, 0, 0);
+    --imdb-icon:  rgb(255, 215, 0);
+    --star-rating: rgb(255, 255, 0);
+    --premium-icon: rgb(0, 191, 255);
+    --srollbar-border: 1px solid rgb(0, 0, 0);
+    --placeholder-color: rgb(51, 51, 51);
+}
+[theme = "dark"] {
+    --background-color: rgb(18, 18, 18);
+    --paragraph-color: rgb(255, 255, 255);
+    --section-background: rgb(13, 9, 7);
+    --alt-color: rgb(119, 119, 119);
+    --shadow-style: 0px 0px 25px -8px rgb(0, 0, 0);
+    --imdb-icon:  rgb(255, 215, 0);
+    --star-rating: rgb(255, 255, 0);
+    --premium-icon: rgb(0, 191, 255);
+    --srollbar-border: 1px solid rgb(255, 255, 255);
+    --placeholder-color: rgb(51, 51, 51);
+}
+[theme="dark"] main #darkModeSwitch #modeSwitchCase #modeSwitchBall {
+    left: 25px;
+}
 * {
     font-family: poppins, Tahoma, Verdana;
 }
